--- a/package.json
+++ b/package.json
@@ -1,82 +1,77 @@
 {
-	"name": "emoji-log-vscode",
-	"displayName": "Emoji Log",
-	"description": "Emoji-Log — An Emoji Git commit log messages spec standard. [ 📦👌🐛📖🚀🤖 ‼️ ].",
-	"version": "1.0.0",
-	"author": {
-		"name": "Ahmad Awais",
-		"email": "me@AhmadAwais.com"
-	},
-	"publisher": "ahmadawais",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/ahmadawais/Emoji-Log-VSCode"
-	},
-	"engines": {
-		"vscode": "^1.40.0"
-	},
-	"galleryBanner": {
-		"color": "#fad000"
-	},
-	"keywords": [
-		"Emoji Log",
-		"Emoji Log VSCode",
-		"git",
-		"emoji",
-		"commit",
-		"messages"
-	],
-	"categories": [
-		"Other"
-	],
-	"icon": "images/icon.png",
-	"activationEvents": [
-		"onCommand:extension.EmojiLog"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "extension.EmojiLog",
-				"title": "Emoji Log: Create Emoji Log git commit message [📦👌🐛📖🚀🤖 ‼️]",
-				"icon": {
-					"dark": "images/icon_dark.svg",
-					"light": "images/icon_light.svg"
-				}
-			}
-		],
-		"menus": {
-			"scm/title": [
-				{
-					"when": "scmProvider == git",
-					"command": "extension.EmojiLog",
-					"group": "navigation"
-				}
-			]
-		}
-	},
-	"badges": [
-		{
-			"url": "https://img.shields.io/badge/SUPPORT%20THIS%20PROJECT-Become%20a%20VSCode%20Power%20User%20%E2%86%92-gray.svg?colorA=131217&colorB=5734F5&style=flat",
-			"href": "https://VSCode.pro/?utm_source=EmojiLogVSCode",
-			"description": "Support this project!"
-		}
-	],
-	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"pretest": "npm run compile"
-	},
-	"devDependencies": {
-		"@types/glob": "^7.1.1",
-		"@types/mocha": "^5.2.7",
-		"@types/node": "^12.11.7",
-		"@types/vscode": "^1.40.0",
-		"glob": "^7.1.5",
-		"mocha": "^6.2.2",
-		"typescript": "^3.6.4",
-		"tslint": "^5.20.0"
-	}
+    "name": "emojis",
+    "displayName": "Emoji-In-Git-Commits-2.0",
+    "description": " Use Emojis in Git Commit Messages ",
+    "version": "1.0.0",
+    "author": {
+        "name": "Aashish",
+        "email": "pawarashish564@gmail.com"
+    },
+    "publisher": "Aashish",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/pawarashish564/Emoji-In-Git-Commits-2.0"
+    },
+    "engines": {
+        "vscode": "^1.40.0"
+    },
+    "galleryBanner": {
+        "color": "#fad000"
+    },
+    "keywords": [
+        "Emoji Log",
+        "Emoji Log VSCode",
+        "git",
+        "emoji",
+        "commit",
+        "emoji",
+        "git emoji"
+    ],
+    "categories": [
+        "Other"
+    ],
+    "icon": "images/icon.png",
+    "activationEvents": [
+        "onCommand:extension.EmojiLog"
+    ],
+    "main": "./out/extension.js",
+    "contributes": {
+        "commands": [{
+            "command": "extension.EmojiLog",
+            "title": "Emoji-In-Git-Commits-2.0",
+            "icon": {
+                "dark": "images/Logo.png",
+                "light": "images/Logo.png"
+            }
+        }],
+        "menus": {
+            "scm/title": [{
+                "when": "scmProvider == git",
+                "command": "extension.EmojiLog",
+                "group": "navigation"
+            }]
+        }
+    },
+    "badges": [{
+        "url": "https://img.shields.io/badge/SUPPORT%20THIS%20PROJECT-Become%20a%20VSCode%20Power%20User%20%E2%86%92-gray.svg?colorA=131217&colorB=5734F5&style=flat",
+        "href": "https://VSCode.pro/?utm_source=EmojiLogVSCode",
+        "description": "Support this project!"
+    }],
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "pretest": "npm run compile"
+    },
+    "devDependencies": {
+        "@types/glob": "^7.1.1",
+        "@types/mocha": "^5.2.7",
+        "@types/node": "^12.11.7",
+        "@types/vscode": "^1.40.0",
+        "glob": "^7.1.5",
+        "mocha": "^6.2.2",
+        "typescript": "^3.6.4",
+        "tslint": "^5.20.0"
+    }
 }
