--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "emojis",
     "displayName": "Emoji-In-Git-Commits-2.0",
     "description": " Use Emojis in Git Commit Messages ",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "author": {
         "name": "Aashish",
         "email": "pawarashish564@gmail.com"
@@ -36,23 +36,26 @@
     ],
     "main": "./out/extension.js",
     "contributes": {
-        "commands": [{
-            "command": "extension.EmojiLog",
-            "title": "Emoji-In-Git-Commits-2.0",
-            "icon": {
-                "dark": "images/Logo.png",
-                "light": "images/Logo.png"
-            }
-        }],
-        "menus": {
-            "scm/title": [{
-                "when": "scmProvider == git",
+        "commands": [
+            {
                 "command": "extension.EmojiLog",
-                "group": "navigation"
-            }]
+                "title": "Emoji-In-Git-Commits-2.0",
+                "icon": {
+                    "dark": "images/Logo.png",
+                    "light": "images/Logo.png"
+                }
+            }
+        ],
+        "menus": {
+            "scm/title": [
+                {
+                    "when": "scmProvider == git",
+                    "command": "extension.EmojiLog",
+                    "group": "navigation"
+                }
+            ]
         }
     },
-
     "scripts": {
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
