Working on #1 issue

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "emoji-in-git-commit",
     "displayName": "Emoji-In-Git-Commits-2.0",
-    "description": " Use Emojis in Git Commit Messages ",
+    "description": " Use Emojis in Git Commit Messages",
     "version": "2.0.1",
     "author": {
         "name": "Aashish",
@@ -36,24 +36,21 @@
     ],
     "main": "./out/extension.js",
     "contributes": {
-        "commands": [
-            {
-                "command": "extension.EmojiLog",
-                "title": " ",
-                "icon": {
-                    "dark": "images/Logo.png",
-                    "light": "images/Logo.png"
-                }
+        "commands": [{
+            "command": "extension.EmojiLog",
+            "title": " ",
+            "icon": {
+                "dark": "images/Logo.png",
+                "light": "images/Logo.png"
             }
-        ],
+        }],
         "menus": {
-            "scm/title": [
-                {
-                    "when": "scmProvider == git",
-                    "command": "extension.EmojiLog",
-                    "group": "navigation"
-                }
-            ]
+            "scm/title": [{
+                "title": "Your Commit",
+                "when": "scmProvider == git",
+                "command": "extension.EmojiLog",
+                "group": "navigation"
+            }]
         }
     },
     "scripts": {
