--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "emoji-in-git-commit",
-    "displayName": "Emojis For Git Commits",
+    "displayName": "Emojis Commits",
     "description": "Emojis for Git Commits",
     "version": "2.0.4",
     "author": {
@@ -30,30 +30,26 @@
     "categories": [
         "Other"
     ],
-    "icon": "images/icon.png",
+    "icon": "Logo.png",
     "activationEvents": [
         "onCommand:extension.EmojiLog"
     ],
     "main": "./out/extension.js",
     "contributes": {
-        "commands": [
-            {
-                "command": "extension.EmojiLog",
-                "title": "Emoji Log ",
-                "icon": {
-                    "dark": "images/icon_dark.svg",
-                    "light": "images/icon_light.svg"
-                }
+        "commands": [{
+            "command": "extension.EmojiLog",
+            "title": "Emoji Commits ",
+            "icon": {
+                "dark": "images/icon_dark.svg",
+                "light": "images/icon_light.svg"
             }
-        ],
+        }],
         "menus": {
-            "scm/title": [
-                {
-                    "when": "scmProvider == git",
-                    "command": "extension.EmojiLog",
-                    "group": "navigation"
-                }
-            ]
+            "scm/title": [{
+                "when": "scmProvider == git",
+                "command": "extension.EmojiLog",
+                "group": "navigation"
+            }]
         }
     },
     "scripts": {
